--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ИИ для жизни и учебы</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Главная страница -->
@@ -19,10 +20,9 @@
         <div class="content">
             <p>ИИ — область компьютерных наук, создающая системы для выполнения задач, требующих человеческого интеллекта:</p>
             <ul>
-                <li>🤖 <strong>Узкий ИИ</strong> (например, голосовые помощники)</li>
-                <li>🧠 <strong>Общий ИИ</strong> (гипотетический, на уровне человека)</li>
+                <li><i class="fas fa-robot"></i> <strong>Узкий ИИ</strong> (например, голосовые помощники)</li>
+                <li><i class="fas fa-brain"></i> <strong>Общий ИИ</strong> (гипотетический, на уровне человека)</li>
             </ul>
-            <img src="https://via.placeholder.com/800x400" alt="Виды ИИ">
         </div>
     </section>
 
@@ -30,15 +30,15 @@
         <h2>1.2 Основные направления ИИ</h2>
         <div class="cards">
             <div class="card">
-                <h3>Машинное обучение</h3>
+                <h3><i class="fas fa-cogs"></i> Машинное обучение</h3>
                 <p>Самообучающиеся системы (обучение с учителем, без учителя, с подкреплением).</p>
             </div>
             <div class="card">
-                <h3>Обработка естественного языка</h3>
+                <h3><i class="fas fa-comments"></i> Обработка естественного языка</h3>
                 <p>Понимание и генерация человеческой речи (чат-боты, переводчики).</p>
             </div>
             <div class="card">
-                <h3>Компьютерное зрение</h3>
+                <h3><i class="fas fa-eye"></i> Компьютерное зрение</h3>
                 <p>Распознавание лиц, анализ медицинских снимков.</p>
             </div>
         </div>
@@ -49,11 +49,11 @@
         <h2>2.1 ИИ в учебе</h2>
         <div class="content">
             <div class="example">
-                <h3>Khan Academy</h3>
+                <h3><i class="fas fa-graduation-cap"></i> Khan Academy</h3>
                 <p>Адаптивные курсы, подстраивающиеся под уровень знаний ученика.</p>
             </div>
             <div class="example">
-                <h3>Автоматизированная проверка</h3>
+                <h3><i class="fas fa-check-circle"></i> Автоматизированная проверка</h3>
                 <p>Системы оценки эссе и тестов с мгновенной обратной связью.</p>
             </div>
         </div>
@@ -64,9 +64,9 @@
         <div class="content">
             <p>Ожидаемые изменения:</p>
             <ul>
-                <li>💼 Новые профессии: инженеры ИИ, аналитики данных</li>
-                <li>📚 Важность изучения программирования и математики</li>
-                <li>⚠️ Риски автоматизации традиционных jobs</li>
+                <li><i class="fas fa-briefcase"></i> Новые профессии: инженеры ИИ, аналитики данных</li>
+                <li><i class="fas fa-book"></i> Важность изучения программирования и математики</li>
+                <li><i class="fas fa-exclamation-triangle"></i> Риски автоматизации традиционных jobs</li>
             </ul>
         </div>
     </section>
@@ -89,9 +89,9 @@
         <div class="content">
             <p>ИИ — не просто технология, а инструмент для:</p>
             <ul>
-                <li>🎓 Персонализированного образования</li>
-                <li>🏠 Умного дома и оптимизации быта</li>
-                <li>💡 Решения глобальных проблем человечества</li>
+                <li><i class="fas fa-graduation-cap"></i> Персонализированного образования</li>
+                <li><i class="fas fa-home"></i> Умного дома и оптимизации быта</li>
+                <li><i class="fas fa-lightbulb"></i> Решения глобальных проблем человечества</li>
             </ul>
         </div>
     </section>
@@ -99,10 +99,12 @@
     <!-- Подвал -->
     <footer>
         <p>Список литературы: 
-            <a href="https://khanacademy.org">Khan Academy</a>, 
-            <a href="https://sberuniversity.ru">СберУниверситет</a>
+            <a href="https://khanacademy.org"><i class="fas fa-link"></i> Khan Academy</a>, 
+            <a href="https://sberuniversity.ru"><i class="fas fa-link"></i> СберУниверситет</a>
         </p>
         <p>Руководитель проекта: Э.М. Шаранова</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
